<resources>
    <string name="app_name">Practice</string>
    <string name="quick_actions">Quick Actions </string>
    <string name="health">Health</string>
    <string name="todo">TODO</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="_02may_02aug_24">02May - 02Aug\'24</string>
    <string name="title_activity_nav_drawer">navDrawer</string>
    <string name="campaigns">CAMPAIGNS</string>
    <string name="product_name">Product Name</string>
    <string name="button">Button</string>
    <string name="lorem_ipsem_upto_2_nlines">Lorem ipsem upto 2 \nlines</string>
    <string name="copy_upto_three_nlines_will_come_nhere">Copy upto three \nlines will come \nhere</string>
    <string name="view_profile">View Profile</string>
    <string name="baseer_singh">Baseer Singh</string>
    <string name="header_image">Header Image</string>
    <string name="_12">12</string>
    <string name="renewals">Renewals</string>
    <string name="_07_days">07 Days</string>
    <string name="quarterly">Quarterly</string>
    <string name="_02_may_02_aug_24">02 May - 02 Aug\'24</string>
    <string name="as_on_12_jun_24">As on 12 Jun\'24</string>
    <string name="comm_lines_quarterly_campaign">Comm. Lines Quarterly Campaign</string>
    <string name="slab_target_wtd_gwp">Slab Target (Wtd.GWP)</string>
    <string name="_75k">75K</string>
    <string name="centreimage">centreImage</string>
    <string name="achieved_wtd_gwp">Achieved (Wtd.GWP)</string>
    <string name="_20_5k">20.5K</string>
    <string name="club">Club</string>
    <string name="gold">Gold</string>
    <string name="eligible">Eligible</string>
    <string name="upcoming_slab_target_wtd_gwp">Upcoming Slab Target (Wtd. GWP)</string>
    <string name="_1_5l">1.5L</string>
    <string name="view_campaign">View Campaign</string>
    <string name="fy_24_25">FY 24-25</string>
    <string name="target_premium">Target Premium</string>
    <string name="_1_1cr">₹1.1Cr</string>
    <string name="earned_premium">Earned Premium</string>
    <string name="_12_5l">₹12.5L</string>
    <string name="not_eligible">Not Eligible </string>
    <string name="earned">Earned</string>
    <string name="wtd_gwp">WTD. GWP</string>
    <string name="target">Target</string>
    <string name="_50000">50000</string>
    <string name="_2cr">2Cr</string>
    <string name="diamondStart">1.95cr Away From Diamond Club</string>
    <string name="diamond_club">Diamond Club</string>
    <string name="view_incentive_details">View Incentive Details</string>
    <string name="bs">BS</string>
    <string name="total_policies">Total Policies</string>
    <string name="_3456">3456</string>
    <string name="you_are">You are</string>
    <string name="for_2_4_campaigns">for 2/4 campaigns</string>
    <string name="_25_7cr">₹25.7Cr</string>
    <string name="total_gwp">Total GWP</string>
</resources>