<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_color"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_name"
                android:textColor="@color/sky_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/copyThreeLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/copy_upto_three_nlines_will_come_nhere"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productName"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/copySubtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/lorem_ipsem_upto_2_nlines"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copyThreeLine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/posterButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_border"
                android:paddingHorizontal="30dp"
                android:text="@string/button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copySubtext" />


            <!--<androidx.constraintlayout.widget.Barrier
                android:id="@+id/posterBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="productName" />-->

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/copyThreeLine"
                app:layout_constraintStart_toEndOf="@id/productName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:src="@drawable/img_famliy"

        />

</FrameLayout>
