<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center_vertical"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/headerImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/header_image"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/img_default_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/headerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:text="@string/baseer_singh"
        android:textColor="@color/dark_blue_color"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/viewProfile"
        app:layout_constraintStart_toEndOf="@id/headerImage"
        app:layout_constraintTop_toTopOf="@+id/headerImage"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/viewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:text="@string/view_profile"
        android:textColor="@color/profile_color"
        android:textFontWeight="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/headerImage"
        app:layout_constraintTop_toBottomOf="@+id/headerName"
        tools:targetApi="p" />


</androidx.constraintlayout.widget.ConstraintLayout>