<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="7dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <TextView
            android:id="@+id/quarterly"
            style="@style/quarterly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarterly"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtYear"
            style="@style/quarterly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_02_may_02_aug_24"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/quarterly" />
        <!--        android:textSize="16sp"-->

        <TextView
            android:id="@+id/txtTillDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_default_color"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            android:text="@string/as_on_12_jun_24"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        android:textSize="16sp"-->

        <View
            android:id="@+id/dashedLine"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/dashed_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtYear" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middlePart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/dashedLine">

            <TextView
                android:id="@+id/progressHeadline"
                style="@style/progressHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comm_lines_quarterly_campaign"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cirProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/progressHeadline">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/txtPremiumLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/progressWithImage"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtTarget"
                        style="@style/txt_linear_progress"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/slab_target_wtd_gwp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!--    android:layout_marginStart="16dp"-->
                    <TextView
                        android:id="@+id/txtTargetPremium"
                        style="@style/circleEarned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_75k"
                        android:textColor="@color/price"
                        app:layout_constraintEnd_toEndOf="@+id/txtTarget"
                        app:layout_constraintStart_toStartOf="@+id/txtTarget"
                        app:layout_constraintTop_toBottomOf="@+id/txtTarget" />
                    <!--    android:layout_marginStart="16dp"-->
                </androidx.constraintlayout.widget.ConstraintLayout>


                <FrameLayout
                    android:id="@+id/progressWithImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/premiumLabel"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txtPremiumLabel"
                    app:layout_constraintTop_toTopOf="parent">
<!--                    android:layout_marginHorizontal="10dp"-->

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/circularProgressIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:progress="25"
                        style="@style/circularIndicator">
                    </com.google.android.material.progressindicator.CircularProgressIndicator>

                    <ImageView
                        android:id="@+id/centerImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/centreimage"
                        android:scaleType="centerInside"
                        android:src="@drawable/comm_lines2" />

                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/premiumLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/progressWithImage"
                    app:layout_constraintTop_toTopOf="parent">

                    <!--    android:layout_marginEnd="16dp"-->

                    <TextView
                        android:id="@+id/txtEarned"
                        style="@style/txt_linear_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/achieved_wtd_gwp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtearnedPremiumValue"
                        style="@style/circleEarned"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/_20_5k"
                        android:textColor="@color/progress_indicator_color"
                        app:layout_constraintEnd_toEndOf="@+id/txtEarned"
                        app:layout_constraintStart_toStartOf="@+id/txtEarned"
                        app:layout_constraintTop_toBottomOf="@+id/txtEarned" />
                    <!--    android:layout_marginEnd="16dp"-->
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clubGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cirProgress">

                <TextView
                    android:id="@+id/club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/club"
                    app:drawableEndCompat="@drawable/gold_bars_shiny_svgrepo_com"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gold"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gold"
                    android:textColor="@color/text_default_color"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/club"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="p" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dashedLine2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/dashed_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/middlePart" />

        <TextView
            android:id="@+id/notEligible"
            style="@style/eligibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/eligible"
            app:layout_constraintBottom_toBottomOf="@+id/dashedLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashedLine2"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/dashedLine2">

            <TextView
                android:id="@+id/txtThirdBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/upcoming_slab_target_wtd_gwp"
                app:drawableEndCompat="@drawable/info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/default_small_text"/>

            <TextView
                android:id="@+id/price"
                style="@style/circleEarned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_5l"
                android:textColor="@color/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtThirdBox" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/button_bg"
                android:text="@string/view_campaign"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>